# action

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  action.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  tox.ini
.doctrees/: action.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: documentation.yml  pythonbuild.yml  release.yml  tests.yml
_sources/: index.rst.txt
action/: README.md  main.py  params.py
doc/: index.rst
docs/: .gitignore  README.md  action.rst  conf.py  modules.rst
docs/source/: conf.py  index.rst
requirements/: requirements-test.txt
src/: __version__.py  main.py
tests/: test_main.py
