[build-system]
requires = ['setuptools>=68']
build-backend = 'setuptools.build_meta'


[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
skip-string-normalization = true # black shouldn`t fix single quotes
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
