[metadata]
name = action
version = 2.0.0
description = Action project description here
long_description = attr: src.__version__.__version__
url = https://github.com/tblkoff/action
author = tblkoff
author_email = some.fake.email@tblkoff.me
license = MIT
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12


[options]
python_requires = >=3.7
packages =
    src

;provides = src
;py_modules = src

;[options.packages.find]
;where = src
