[metadata]
name = action
version = 0.0.0
description = Action project description here
long_description = file: action/README.md
url = https://github.com/tblkoff/action
author = tblkoff
author_email = some.fake.email@tblkoff.me
license = MIT
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12


[options]
python_requires = >=3.7
packages =
    action
install_requires =
    requests>=2.31.0

;provides = action
;py_modules = action

;[options.packages.find]
;where = action
